# allegro-pol

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
allegro_pol/: __init__.py  _compile.py  _keys.py  _version.py
allegro_pol/integrations/: __init__.py  ase.py  torchsim.py
allegro_pol/model/: __init__.py  allegro_pol_model.py
allegro_pol/nn/: __init__.py  efield_tensor_embed.py  pol_grad.py
allegro_pol/train/: __init__.py  folded_pol_metrics.py  pol_metrics_manager.py
configs/: tutorial.yaml
scripts/: README.md
scripts/1.CalculatorQE/: 1.CalculatorQE.py
scripts/2.ParseQE/: 2.ParseQE.py  parse_QE.py
scripts/3.Parity/: 3.Parity.py
scripts/4.Dielectric/: 4.Dielectric.py
scripts/5.Vibrational/: 5.Vibrational.py
scripts/6.Hysteresis/: 6.Hysteresis.py
scripts/7.Dipoles/: 7.Dipoles.py  dipoles_fast.py
scripts/8.CoerciveField/: 8.CoerciveField.py
scripts/9.Mobility/: 9.Mobility.py
scripts/combine_LAMMPS_restarts/: combine_lammps_restarts.py
tests/model/: test_allegro_pol.py
tests/train/: test_folded_pol.py
