[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allegro-pol"
dynamic = ["version"]
description = "allegro-pol is an extension package of the nequip framework that adapts the Allegro architecture (another nequip extension package) for the prediction of the electric response of materials (polarization, Born charges, polarizability) in addition to energy and forces within a single model."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "The NequIP Developers", email = "allegro-nequip@g.harvard.edu"},
]
dependencies = [
    "nequip>=0.17.0",
    "nequip-allegro>=0.8.2,<0.9.0",
]

[project.urls]
Repository = "https://github.com/mir-group/allegro-pol"

[tool.setuptools]
packages = {find = {include = ["allegro_pol", "allegro_pol.*"]}}

[tool.setuptools.dynamic]
version = {attr = "allegro_pol._version.__version__"}

[tool.ruff]
line-length = 88
exclude = [
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "docs",
    ".git",
    "__pycache__",
    "examples",
    "tmp"
]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E226", "E501", "E741", "E743", "C901", "E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.entry-points."nequip.extension"]
init_always = "allegro_pol"
